Fixed trending.css so the 'What's trending' doesn't get cut off behind the discover button on desktop sites anymore

--- a/css/sections/trending.css
+++ b/css/sections/trending.css
@@ -48,7 +48,7 @@
   justify-content: center;
   flex-direction: column;
 
-  padding: 32px 64px;
+  padding: 32px 64px 32px 120px;
 }
 
 .trending__list {
